--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint": "^8.57.0",
+    "mongoose": "^8.0.0",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
 }
