--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "next/core-web-vitals"
   ],
   "rules": {
-    "react/prop-types": "on",
+    "react/prop-types": "off",
     "no-unused-vars": "warn"
   }
 }
