--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "eslint": "^8.57.0",
-    "mongoose": "^8.8.3",
-    "next": "^14.2.3",
+    "@tailwindcss/postcss": "^4.1.11",
+    "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.33.0",
+    "lucide-react": "^0.539.0",
+    "mongoose": "^8.17.1",
+    "next": "^15.4.6",
     "next-auth": "^5.0.0-beta.25",
-    "react": "^18",
-    "react-dom": "^18"
+    "postcss": "^8.5.6",
+    "react": "^19",
+    "react-dom": "^19",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "15.4.6",
+    "tw-animate-css": "^1.3.6"
   }
 }
