--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/postcss": "^4.1.11",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.33.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.539.0",
     "mongoose": "^8.17.1",
+    "motion": "^12.23.12",
     "next": "^15.4.6",
     "next-auth": "^5.0.0-beta.25",
+    "npm": "^11.5.2",
     "postcss": "^8.5.6",
     "react": "^19",
     "react-dom": "^19",
