--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/postcss": "^4.1.11",
     "bcrypt": "^6.0.0",
@@ -22,6 +24,7 @@
     "motion": "^12.23.12",
     "next": "^15.4.6",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "npm": "^11.5.2",
     "postcss": "^8.5.6",
     "react": "^19",
