--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.33.0",
+    "gray-matter": "^4.0.3",
     "install": "^0.13.0",
     "lucide-react": "^0.539.0",
     "mongoose": "^8.17.1",
@@ -29,6 +30,8 @@
     "postcss": "^8.5.6",
     "react": "^19",
     "react-dom": "^19",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
